# proto4webrtc

./: .gitignore  README.md  buf.yaml  deploy.sh
.devcontainer/: Dockerfile  devcontainer.json
example/: .env.example  README.md  buf.gen.yaml
example/deploy/: .env.example  compose.yml
example/proto/example/: streams.proto
example/proto/rov/rpc/: control.proto
example/proto/rov/streams/: pointcloud.proto  video.proto
example/proto/rov_config/: mission.proto
example/robot/: .gitignore  Dockerfile  README.md  compose.yml  entrypoint.sh  pyproject.toml
example/robot/ros2_ws/: .gitignore  compose.yml  pyproject.toml
example/robot/ros2_ws/src/robot_bringup/launch/: webrtc.launch.py  webrtc_prod.launch.py
example/robot/ros2_ws/src/webrtc_configurator_pkg/: package.xml  setup.py
example/robot/ros2_ws/src/webrtc_configurator_pkg/webrtc_configurator_pkg/: webrtc_configurator_node.py
example/robot/ros2_ws/src/webrtc_streamer_pkg/: setup.py
example/robot/ros2_ws/src/webrtc_streamer_pkg/webrtc_streamer_pkg/: webrtc_streamer_node.py
example/robot/src/robot_bringup/: package.xml
example/robot/src/robot_bringup/launch/: all_nodes.launch.py
example/robot/src/webrtc_configurator_pkg/: setup.cfg  setup.py
example/robot/src/webrtc_configurator_pkg/webrtc_configurator_pkg/: webrtc_configurator_node.py
example/robot/src/webrtc_streamer_pkg/: package.xml  setup.py
example/robot/src/webrtc_streamer_pkg/webrtc_streamer_pkg/: webrtc_streamer_node.py
example/server/: buf.gen.yaml  next.config.ts  package-lock.json  package.json
example/server/src/app/: layout.tsx  page.tsx
example/server/src/app/api/login/: route.ts
example/server/src/app/api/logout/: route.ts
example/server/src/app/api/me/: route.ts
example/server/src/app/api/sfu/: route.ts
example/server/src/app/api/status/: route.ts
example/server/src/app/camera/: page.tsx
example/server/src/app/configurator/: page.tsx
example/server/src/app/control/: page.tsx
example/server/src/app/mission/: page.tsx
example/server/src/app/pointcloud/: page.tsx
example/server/src/app/telemetry/: page.tsx
example/server/src/components/: AuthControl.tsx  Toaster.tsx
example/server/src/config/: auth.ts
example/server/src/contexts/: AuthContext.tsx
example/server/src/lib/: session.ts  toast.ts
example/server/src/lib/mediasoup/: sfu.ts
example/server/src/lib/proto4webrtc/: auth.ts  sfu.ts
example/server/src/lib/webrtc/: iceServers.ts
proto/proto4webrtc/: options.proto  rpc.proto
python/: LICENSE  README.md  pyproject.toml
python/proto4webrtc/: README.md  __init__.py  options_pb2.py  options_pb2.pyi  pyproject.toml  rpc_pb2.py  rpc_pb2.pyi  runtime.py
python/proto4webrtc/proto4webrtc/: __init__.py  options_pb2.py  options_pb2.pyi  rpc_pb2.py  rpc_pb2.pyi  runtime.py
python/proto4webrtc/tests/: test_runtime.py
python/proto4webrtc_codegen/: README.md  __init__.py  __main__.py  driver.py  extract.py  plugin.py  pyproject.toml  render_python.py
python/proto4webrtc_codegen/proto4webrtc_codegen/: __main__.py  driver.py  extract.py  naming.py  plugin.py  render_python.py
python/proto4webrtc_codegen/proto4webrtc_codegen/proto/proto4webrtc/: options.proto  rpc.proto
python/proto4webrtc_codegen/proto4webrtc_codegen/templates/: producers.py.j2
python/proto4webrtc_codegen/templates/: producers.py.j2
python/proto4webrtc_codegen/tests/: test_driver.py
python/tests/: test_driver.py  test_runtime.py
ts/: README.md  package-lock.json  package.json
ts/proto4webrtc/: README.md  package-lock.json  package.json  tsconfig.json
ts/proto4webrtc/src/: auth.ts  client.ts  config.ts  index.ts  peer.ts  roles.ts  sfu.ts
ts/proto4webrtc/src/__tests__/: auth.test.ts  integration.test.ts  peer.test.ts  roles.test.ts  sfu.test.ts
ts/proto4webrtc_codegen/: README.md  package-lock.json  package.json
ts/proto4webrtc_codegen/src/: plugin.mjs
ts/src/: plugin.mjs
