[tool.poetry]
package-mode = false

[project]
name = "ros2-example"
version = "0.1.0"
description = ""
authors = [
    {name = "Emil Djupvik",email = "emil@djupvik.dev"}
]
requires-python = ">=3.10,<4"
dependencies = [
    "rich (>=14.3.3,<15.0.0)",
    "proto4webrtc",
    "proto4webrtc-codegen"
]

# Local checkout, not PyPI: the example tracks the repo's runtime/codegen as
# it stands. NOT editable: colcon reaches this venv via PYTHONPATH from the
# system python, which never processes the .pth hook an editable (PEP 660)
# install leaves in site-packages — the package must exist there as real
# files. Re-run `poetry lock && poetry install --no-root` after changing
# python/.
[tool.poetry.dependencies]
proto4webrtc = { path = "../../python/proto4webrtc", develop = false }
proto4webrtc-codegen = { path = "../../python/proto4webrtc_codegen", develop = false }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
