[project]
name = "proto4webrtc"
version = "1.2.0"
description = "Mediasoup producer runtime (pymediasoup) for proto4webrtc-annotated protofiles"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Emil Djupvik" }]
requires-python = ">=3.10"
dependencies = [
    "protobuf>=4.25",
    "aiortc>=1.14",
    "av>=16",
    "pymediasoup>=1.5",
    "websockets>=16",
    "numpy>=1.26",
]

[project.optional-dependencies]
# The code generator lives in its own distribution so production builds can
# ship the runtime alone; `pip install proto4webrtc[compiler]` pulls it in.
compiler = ["proto4webrtc-codegen==1.2.0"]
test = ["pytest>=8", "pytest-asyncio>=0.24"]

[project.urls]
Repository = "https://github.com/Emil1483/proto4webrtc"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["proto4webrtc*"]

[tool.setuptools.package-data]
proto4webrtc = ["*.pyi"]
